--- a/LoadingBananaPeel/Examples/src/main/AndroidManifest.xml
+++ b/LoadingBananaPeel/Examples/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.rzloadingbananapeel.examples.MainActivity"
+            android:name="com.smb.examples.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
