--- a/LoadingBananaPeel/Examples/build.gradle
+++ b/LoadingBananaPeel/Examples/build.gradle
@@ -18,6 +18,7 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':LoadingBananaPeel')
 }
